[Nolij: Website Project: Draft Homepage Webcomponents Using React Task] Drafted the Apply Block component.

--- a/themes/elucid/components/vehicles/sass/vehicles.scss
+++ b/themes/elucid/components/vehicles/sass/vehicles.scss
@@ -29,6 +29,7 @@
 
       .nolij-vehicles-component-lead {
         color: $gray-text;
+        line-height: 28px;
       }
       .nolij-vehicles-component-details {
         .nolij-vehicles-component-card-title {
