[Nolij: Website Project: Draft Homepage Webcomponents Using React Task] Drafted the Homepage Hero component.

--- a/themes/elucid/_components.scss
+++ b/themes/elucid/_components.scss
@@ -1,2 +1,3 @@
 @import "components/apply_block/sass/apply_block";
+@import "components/hero/sass/hero";
 @import "components/vehicles/sass/vehicles";
