--- a/themes/elucid/templates/page--front.html.twig
+++ b/themes/elucid/templates/page--front.html.twig
@@ -81,6 +81,8 @@
   {{ page.help }}
   <main role="main">
     <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
+    <!-- The React Container element -->
+    <div id="nolij-react-app-container">Nolij App Container Loading.</div>
     {{ drupal_block ('homepage_banner_block') }}
     {{ page.content }}
     {{ drupal_block ('ourclients') }}
