[Nolij: Website Project: Draft Homepage Webcomponents Using React Task] Drafted the Services block.

--- a/themes/elucid/_components.scss
+++ b/themes/elucid/_components.scss
@@ -1,3 +1,4 @@
 @import "components/apply_block/sass/apply_block";
 @import "components/hero/sass/hero";
+@import "components/services/sass/services";
 @import "components/vehicles/sass/vehicles";
