[Nolij: Website Project: Draft Homepage Webcomponents Using React Task] Drafted the Clients block.

--- a/themes/elucid/_components.scss
+++ b/themes/elucid/_components.scss
@@ -1,4 +1,5 @@
 @import "components/apply_block/sass/apply_block";
+@import "components/clients/sass/clients";
 @import "components/hero/sass/hero";
 @import "components/services/sass/services";
 @import "components/vehicles/sass/vehicles";
