[Nolij: Website Project: Draft Homepage Webcomponents Using React Task] Drafted the home page Connect block component, added the video background for the hero block, added the client logos to the clients block, added submit code to the Contact Message block component, and added the Contact Message REST module

--- a/themes/elucid/_components.scss
+++ b/themes/elucid/_components.scss
@@ -1,5 +1,6 @@
 @import "components/apply_block/sass/apply_block";
 @import "components/clients/sass/clients";
+@import "components/connect/sass/connect";
 @import "components/hero/sass/hero";
 @import "components/services/sass/services";
 @import "components/vehicles/sass/vehicles";
