--- a/themes/elucid/components/clients/sass/clients.scss
+++ b/themes/elucid/components/clients/sass/clients.scss
@@ -44,6 +44,7 @@
 
           .nolij-clients-client-logo {
             .nolij-clients-client-logo-img {
+              max-width: 140px;
             }
           }
           .nolij-clients-client-label {
