--- a/themes/elucid/sass/style.scss
+++ b/themes/elucid/sass/style.scss
@@ -52,7 +52,7 @@ $yellow-light: rgb(255, 227, 180);
 
 $red-dark: rgb(168, 40, 150);
 $red: #a00405; // Nolij red
-$red-light: rgb(255, 200, 188);
+$red-light: #e30a0c;
 
 $purple-dark: rgb(94, 32, 160);
 $purple: rgb(143, 107, 216);
