--- a/themes/elucid/sass/style.scss
+++ b/themes/elucid/sass/style.scss
@@ -27,6 +27,7 @@
 $xsmall-breakpoint: 400px;
 $mobile-breakpoint: 650px;
 $tablet-breakpoint: 768px;
+$header-menu-breakpoint: 950px;
 
 // II. Colors.
 
