[Nolij: Website Project: Draft Homepage Webcomponents Using React Task] Added the Video background to the homepage Hero block. Drafted the mobile behavior for the Services block. Added background grid patterns. Added other style revisions.

--- a/themes/elucid/components/clients/sass/clients.scss
+++ b/themes/elucid/components/clients/sass/clients.scss
@@ -4,7 +4,7 @@
 */
 .nolij-clients-container {
   @include styleguide;
-  background-color: #fcfbf7;
+  background-color: #f6f6f6;
 
   .nolij-clients-component {
     @include padded-content-block(40px 42px);
