--- a/themes/elucid/sass/style.scss
+++ b/themes/elucid/sass/style.scss
@@ -40,7 +40,7 @@ $gray-dark: rgb(83, 82, 83);
 $gray: rgb(124, 124, 124);
 $gray-light: #92a1ac;
 $gray-lightest: #d0d0d0;
-$gray-text: #7c7c7c;
+$gray-text: #1e1e1e;
 $gray-header: rgb(252, 252, 252);
 
 $green-dark: rgb(34, 139, 57);
