--- a/themes/elucid/sass/features/footer.scss
+++ b/themes/elucid/sass/features/footer.scss
@@ -54,6 +54,9 @@ footer {
             padding-bottom: 15px;
             padding-top: 0px;
           }
+          .elucid_address {
+            margin-left: 40px;
+          }
           @media screen and (max-width: $tablet-breakpoint) {
             .elucid_phone {
               display: inline-block;
