--- a/themes/elucid/sass/features/header.scss
+++ b/themes/elucid/sass/features/header.scss
@@ -9,6 +9,7 @@ header {
   @include styleguide();
   background-color: white;
   box-shadow: 0 1px 2px 0 rgba(0,0,0,0.25);
+  font-family: $second-font-family;
   position: relative; // needed for the shadow effect to cast over subsequent elements.
   width: 100%;
   z-index: 10; // needed to cast shadow over the subsequent element.
@@ -110,9 +111,9 @@ header {
                   a {
                     color: $gray-dark;
                     cursor: pointer;
+                    text-decoration: none;
                     &:hover {
                       color: $blue;
-                      text-decoration: none;
                     }
                   }
                   &.elucid_active {
