--- a/themes/elucid/templates/page--front.html.twig
+++ b/themes/elucid/templates/page--front.html.twig
@@ -83,12 +83,16 @@
     <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
     <!-- The React Container element -->
     <div id="nolij-react-app-container">Nolij App Container Loading.</div>
+{#
+/*
     {{ drupal_block ('homepage_banner_block') }}
     {{ page.content }}
     {{ drupal_block ('ourclients') }}
     {{ drupal_block ('template_our_partners') }}
     {{ drupal_block ('contactusblock') }}
     {{ drupal_block ('credentials_block') }}
+*/
+#}
   </main>
   <footer role="contentinfo">
     <div class="footer_content layout-padded-content">
@@ -101,9 +105,10 @@
             {{ drupal_block ('footer_nav_menu') }}
           </div>
           <div class="company_info">
-            <span class="elucid_bold">Elucid Solutions, Inc.</span>
-            <p>4300 Montgomery Ave,<br>Suite 302,<br>Bethesda, MD 20814</p>
-            <p><span class="elucid_phone">301.652.8208</span></p> 
+            <span class="elucid_bold">NOLIJ CONSULTING</span>
+            <p><span class="elucid_address">8609 Westwood Center Drive,<br/>5th Floor,<br/>Vienna, VA 22182</span></p>
+            <p><span class="elucid_phone">571.765.3046</span></p> 
+            <p><a class="elucid_email" href="mailto://info@elucidsolutions.com">info@elucidsolutions.com</a></p>
           </div>
         </div>
         <div class="footer_med_right">
@@ -111,10 +116,10 @@
       </div>
       <div class="footer_bottom">
         <div class="footer_bottom_left">
-          <a href="mailto://info@elucidsolutions.com">info@elucidsolutions.com</a>
+          <div class="elucid_linkedin">Nolij Consulting on LinkedIn</div>
         </div>
         <div class="footer_bottom_right">
-          <div class="credits">&copy; 2017 Elucid Solutions, Inc.</div>
+          <div class="credits">&copy; 2018 Nolij Consulting LLC</div>
         </div>
       </div>
     </div>
